# sappy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sappy_test.py  setup.py
sappy/: __init__.py  sap.py
src/: Solver.cpp  Solver.hpp  main.cpp
